Fixup CSS alignment for full-width posts

--- a/assets/css/full-width-media.scss
+++ b/assets/css/full-width-media.scss
@@ -12,7 +12,7 @@
 .content picture,
 .content svg {
   display: flex;
-  max-height: 80vh;
+  max-height: 90vh;
   max-width: calc(var(--full-width) + var(--add-media-width));
   margin: 3rem auto;
 }
